--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,8 @@
     <div id="edit-student" style="display:none;">
       <form>
         <div>
-          <label for="name">Name:</label>
-          <input type="text" id="name" />
+          <label for="studentName">Student name:</label>
+          <input type="text" id="studentName" />
         </div>
         <div>
           <label for="age">Age</label>
